@@ -4,6 +4,7 @@ import com.Kkrap.Entity.*;
 import com.Kkrap.Kafka.FolderCreateProducer;
 import com.Kkrap.RequestDTO.FoldersCreateRequest;
 import com.Kkrap.RequestDTO.FoldersDeleteRequest;
+import com.Kkrap.RequestDTO.FoldersScrapRequest;
 import com.Kkrap.RequestDTO.FoldersUpdateRequest;
 import com.Kkrap.ResponseDTO.FoldersLinksAllResponse;
 import com.Kkrap.ResponseDTO.FoldersResponse;
@@ -12,6 +13,7 @@ import com.Kkrap.Service.FoldersDocument.FoldersDocumentService;
 import com.Kkrap.Service.FollowsFoldersPermission.FoldersPermissionsService;
 import com.Kkrap.Service.Users.UsersService;
 
+import lombok.extern.slf4j.Slf4j;
 import org.springframework.data.redis.core.StringRedisTemplate;
 import org.springframework.http.ResponseEntity;
 import org.springframework.stereotype.Service;
@@ -19,11 +21,13 @@ import org.springframework.transaction.annotation.Transactional;
 
 import java.time.Duration;
 import java.util.ArrayList;
+import java.util.Comparator;
 import java.util.List;
 import java.util.stream.Collectors;
 import java.util.stream.Stream;
 
 @Service
+@Slf4j
 public class FoldersManagerService {
     private final FoldersService foldersService;
 
@@ -64,12 +68,24 @@ public class FoldersManagerService {
         List<Folders> allMyFolders = foldersService.findByUserUserId(userId);
 
         // shared 컬럼으로 분리
-        List<Folders> ownFolders = allMyFolders.stream()
-                .filter(folder -> !folder.isShared())
-                .collect(Collectors.toList());
+        // defaultFolder == true인 폴더 (딱 하나라고 가정)
+        List<Folders> defaultFolderList = allMyFolders.stream()
+                .filter(folder -> !folder.isShared() && folder.isDefaultFolder())
+                .toList();
+
+        // 나머지 공유되지 않은 폴더 중 defaultFolder == false 인 것들
+        List<Folders> otherOwnFolders = allMyFolders.stream()
+                .filter(folder -> !folder.isShared() && !folder.isDefaultFolder())
+                .sorted(Comparator.comparing(Folders::getCreateTime).reversed())
+                .toList();
+
+        // shared 컬럼으로 분리
+        List<Folders> ownFolders = Stream.concat(defaultFolderList.stream(), otherOwnFolders.stream())
+                .toList();
 
         List<Folders> mySharedFolders = allMyFolders.stream()
                 .filter(Folders::isShared)
+                .sorted(Comparator.comparing(Folders::getCreateTime).reversed())
                 .collect(Collectors.toList());
 
         // 공유받은 폴더 (권한 테이블 기준)
@@ -112,12 +128,24 @@ public class FoldersManagerService {
         List<Folders> allMyFolders = foldersService.findByUserUserId(userId);
 
         // visible = true 필터
-        List<Folders> ownFolders = allMyFolders.stream()
-                .filter(folder -> !folder.isShared() && folder.isVisible())
-                .collect(Collectors.toList());
+        // defaultFolder == true인 폴더 (딱 하나라고 가정)
+        List<Folders> defaultFolderList = allMyFolders.stream()
+                .filter(folder -> !folder.isShared() && folder.isDefaultFolder())
+                .toList();
+
+        // 나머지 공유되지 않은 폴더 중 defaultFolder == false 인 것들
+        List<Folders> otherOwnFolders = allMyFolders.stream()
+                .filter(folder -> !folder.isShared() && !folder.isDefaultFolder())
+                .sorted(Comparator.comparing(Folders::getCreateTime).reversed())
+                .toList();
+
+        // shared 컬럼으로 분리
+        List<Folders> ownFolders = Stream.concat(defaultFolderList.stream(), otherOwnFolders.stream())
+                .toList();
 
         List<Folders> mySharedFolders = allMyFolders.stream()
                 .filter(folder -> folder.isShared() && folder.isVisible())
+                .sorted(Comparator.comparing(Folders::getCreateTime).reversed())
                 .collect(Collectors.toList());
 
         // 초대받은 공유 폴더
@@ -158,13 +186,24 @@ public class FoldersManagerService {
         usersService.findById(userId);
         List<Folders> allMyFolders = foldersService.findByUserUserId(userId);
 
+        // defaultFolder == true인 폴더 (딱 하나라고 가정)
+        List<Folders> defaultFolderList = allMyFolders.stream()
+                .filter(folder -> !folder.isShared() && folder.isDefaultFolder())
+                .toList();
+
+        // 나머지 공유되지 않은 폴더 중 defaultFolder == false 인 것들
+        List<Folders> otherOwnFolders = allMyFolders.stream()
+                .filter(folder -> !folder.isShared() && !folder.isDefaultFolder())
+                .sorted(Comparator.comparing(Folders::getCreateTime).reversed())
+                .toList();
+
         // shared 컬럼으로 분리
-        List<Folders> ownFolders = allMyFolders.stream()
-                .filter(folder -> !folder.isShared())
-                .collect(Collectors.toList());
+        List<Folders> ownFolders = Stream.concat(defaultFolderList.stream(), otherOwnFolders.stream())
+                .toList();
 
         List<Folders> mySharedFolders = allMyFolders.stream()
                 .filter(Folders::isShared)
+                .sorted(Comparator.comparing(Folders::getCreateTime).reversed())
                 .collect(Collectors.toList());
 
         // 공유받은 폴더 (권한 테이블 기준)
@@ -288,5 +327,45 @@ public class FoldersManagerService {
         return ResponseEntity.ok(FoldersResponse.from(folders, users.getUserId()));
     }
 
+    @Transactional
+    public ResponseEntity<FoldersLinksAllResponse> scrapFolder(Long userId, FoldersScrapRequest foldersScrapRequest) {
+        Users user = usersService.findById(userId);
+        Folders newFolder = foldersService.save(Folders.of(foldersScrapRequest, user));
+
+        Folders sourceFolder = foldersService.findById(foldersScrapRequest.getSourceFolderId());
+
+        //Redis
+        String redisKey = "scrap:" + sourceFolder.getFolderId();
+        redisTemplate.opsForValue().increment(redisKey);
+
+        List<FoldersLinks> sourceFolderLinks = foldersLinksService.findByFolders(sourceFolder);
+
+
+        List<Links> newLinks = sourceFolderLinks.stream()
+                .map(foldersLink -> {
+                    Links originalLink = foldersLink.getLinks();
+                    return linksService.save(
+                            Links.of(
+                                    originalLink.getLinkUrl(),
+                                    originalLink.getLinkName(),
+                                    originalLink.getThumbnailUrl(),
+                                    originalLink.getFaviconUrl()
+                            )
+                    );
+                })
+                .collect(Collectors.toList());
+
+        newLinks.forEach(link -> {
+            try {
+                foldersLinksService.save(FoldersLinks.of(newFolder, link, userId));
+            } catch (Exception e) {
+                log.error("[Scrap] 링크 저장 실패 linkUrl={} reason={}", link.getLinkUrl(), e.getMessage(), e);
+            }
+        });
+
+        return ResponseEntity.ok(
+                FoldersLinksAllResponse.of(newFolder, newLinks)
+        );
+    }
 
 }
